add status message to chart

--- a/combogen/templates/combo-chart-inline.html
+++ b/combogen/templates/combo-chart-inline.html
@@ -12,6 +12,7 @@
     {% include "style.css" %}
   </style>
   <div id="container">
+    <span id="status">{{ status }}</span>
     <header>
       <div id="logo"><img src="{{ image_urls.logo }}" alt="logo"></div>
       <h1 id="title">{{ title }}</h1>
