--- a/combogen/templates/style.css
+++ b/combogen/templates/style.css
@@ -105,7 +105,7 @@ header {
 
 
 #chart {
-  height: 65%;
+  height: 60%;
   width: 95%;
   margin: 0 auto;
   table-layout: fixed;
@@ -114,12 +114,13 @@ header {
   color: #FFFFFF;
   overflow: hidden;
   text-align: center;
-  font-weight: 500;
+  font-size: 0.95rem;
+  font-weight: 600;
 }
 
 
 footer {
-  margin: 0.5% auto 0;
+  margin: 2% auto 0;
   display: table;
   width: 95%;
   max-height: 10%;
