--- a/combogen/templates/disclaimer.html
+++ b/combogen/templates/disclaimer.html
@@ -1,3 +1,5 @@
-This information has been researched to the best ability by the TripSit team, and the greatest effort has been made not to include incorrect or misleading information though some information may never be 100% accurate.<br>This chart is meant as a quick reference guide, not a definitive resource on drug combinations . Use at your own risk and please try to be safe. When mixing drugs keep potentiation in mind and start with lower doses of each substance.<br>
-  For more information on specific drugs visit http://drugs.tripsit.me<br>
-  <h3>Up-to-date information, details, explanations and references will be published on http://combo.tripsit.me</h3>
+This information has been researched to the best ability by the TripSit team, and the greatest effort has been made not to include incorrect or misleading information though some information may never be 100% accurate.<br>
+<b>This chart is meant as a quick reference guide and additional research must always be done.</b> It is not sufficient to only consult this chart when considering a combination. Use at your own risk and please try to be safe.<br>
+When mixing drugs keep potentiation in mind and start with lower doses of each substance.<br>
+For more information on specific drugs visit http://drugs.tripsit.me<br>
+<h3>Up-to-date information, details, explanations and references will be published on http://combo.tripsit.me</h3>
