remove serotonin syndrome from legend

--- a/combogen/templates/legend.html
+++ b/combogen/templates/legend.html
@@ -9,6 +9,6 @@
     <td class="caution">{{ fa_label("Caution") }}</td>
     <td class="unsafe">{{ fa_label("Unsafe") }}</td>
     <td class="dangerous">{{ fa_label("Dangerous") }}</td>
-    <td class="serotoninsyndrome">{{ fa_label("Serotonin Syndrome") }}</td>
+    <!--<td class="serotoninsyndrome">{{ fa_label("Serotonin Syndrome") }}</td>-->
   </tr>
 </table>
