make most resources local, resize labels that don't fit into cell (e.g. Benzodiazepines)

--- a/combogen/templates/combo-table.html
+++ b/combogen/templates/combo-table.html
@@ -1,39 +1,39 @@
-{% macro table_header() %}
+{% macro horizontal_table_header() %}
   <tr>
     <td></td>
     {% for drug in db.drugs %}
-    <td class="{{ drug.group.name }}">{{ drug.name }}</td>
+    <td class="{{ drug.group.name }} label"><span>{{ drug.name }}</span></td>
     {% endfor %}
     <td></td>
   </tr>
 {% endmacro %}
 
 <table id="chart">
-{{ table_header() }}
+{{ horizontal_table_header() }}
 
 {% for drugA in db.drugs %}
 {% set outer = loop %}
   <tr>
-    <td class="{{ drugA.group.name }}">{{ drugA.name }}</td>
-  {% for drugB in db.drugs %}
-    {% set inner = loop %}
-    {% if drugA == drugB %}
-      {% set class = drugA.group.name %}
-      {% set content = drugA.name %}
-    {% else %}
-      {% set interaction = db.interaction(drugA, drugB) %}
-      {% set class = cfg.interaction_to_class(interaction) %}
-      {% set fa_icon = cfg.interaction_fa(interaction) %}
-      {% set content = '<i class="fa ' + fa_icon + '"></i>' %}
-      {% if class == "unknown" %}
-        {% set content = "{} + {} ({})".format(drugA.name, drugB.name, interaction) %}
+    <td class="{{ drugA.group.name }} label"><span>{{ drugA.name }}</span></td>
+    {% for drugB in db.drugs %}
+      {% set inner = loop %}
+      {% if drugA == drugB %}
+        {% set class = drugA.group.name + " label" %}
+        {% set content = "<span>" + drugA.name + "</span>" %}
+      {% else %}
+        {% set interaction = db.interaction(drugA, drugB) %}
+        {% set class = cfg.interaction_to_class(interaction) %}
+        {% set fa_icon = cfg.interaction_fa(interaction) %}
+        {% set content = '<i class="fa ' + fa_icon + '"></i>' %}
+        {% if class == "unknown" %}
+          {% set content = "{} + {} ({})".format(drugA.name, drugB.name, interaction) %}
+        {% endif %}
       {% endif %}
-    {% endif %}
-    <td class="{{ class }}">{{ content }}</td>
-  {% endfor %}
-    <td class="{{ drugA.group.name }}">{{ drugA.name }}</td>
+      <td class="{{ class }}">{{ content }}</td>
+    {% endfor %}
+    <td class="{{ drugA.group.name }} label"><span>{{ drugA.name }}</span></td>
   </tr>
 {% endfor %}
 
-{{ table_header() }}
+{{ horizontal_table_header() }}
 </table>
