--- a/combogen/templates/combo-chart-full.html
+++ b/combogen/templates/combo-chart-full.html
@@ -4,8 +4,11 @@
   <meta charset="UTF-8">
   <title>{{ title }}</title>
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' type='text/css'>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="resources/css/font-awesome.min.css">
   <link rel="stylesheet" href="resources/css/style.css">
+  <script src="resources/js/jquery-2.2.1.min.js"></script>
+  <script src="resources/js/jquery.textfill.min.js"></script>
+  <script src="resources/js/script.js"></script>
 </head>
 <body>
   <div id="container">
