--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,22 +1,18 @@
 @font-face {
   font-family: "AgencyFBCondensed";
-  src: url("../font/AgencyFBBoldCondensed.ttf");
+  src: url("../fonts/AgencyFBBoldCondensed.ttf");
 }
 @font-face {
   font-family: "UniversCondensedLight";
-  src: url("../font/Univers-CondensedLight.otf");
+  src: url("../fonts/Univers-CondensedLight.otf");
 }
 @font-face {
   font-family: "UniversLight";
-  src: url("../font/Univers-Light.otf");
+  src: url("../fonts/Univers-Light.otf");
 }
 @font-face {
   font-family: "Univers";
-  src: url("../font/Univers.otf");
-}
-body {
-  margin: 0;
-  padding: 0;
+  src: url("../fonts/Univers.otf");
 }
 
 .psychedelic {
@@ -60,11 +56,23 @@ body {
   background-color: #6f6f6f;
 }
 
+html {
+  font-size: 16px;
+  width: 3800px;
+  height: 1600px;
+}
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
 #container {
   position:  relative;
   background-color: #000000;
-  width: 3800px;
-  height: 1600px;
+  width: 100%;
+  height: 100%;
 }
 #status {
   font-family: 'Open Sans', sans-serif;
@@ -132,6 +140,9 @@ header {
   color: #FFFFFF;
   text-align: center;
   overflow: hidden;
+}
+#chart .label span{
+  width: 95%;
 }
 
 
