--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -87,7 +87,7 @@ body {
 
 header {
   display: table;
-  padding-top: 0.2%;
+  padding-top: 0.5%;
   width: 95%;
   height: 15%;
   max-height: 15%;
@@ -102,6 +102,8 @@ header {
   max-height: 40%;
 }
 #title {
+  position: relative;
+  bottom: 4%;
   font-family: 'AgencyFBCondensed', 'Open Sans', sans-serif;
   color: #FFFFFF;
   font-weight: 300;
@@ -140,9 +142,6 @@ header {
   color: #FFFFFF;
   text-align: center;
   overflow: hidden;
-}
-#chart .label span{
-  width: 95%;
 }
 
 
