--- a/combogen/templates/legend.html
+++ b/combogen/templates/legend.html
@@ -1,5 +1,5 @@
 {% macro fa_label(interaction) %}
-  <i class="fa {{ cfg.interaction_fa(interaction) }}"></i><br>{{ interaction }}
+  <i class="fa {{ cfg.interaction_icon(interaction) }}"></i><br>{{ interaction }}
 {% endmacro %}
 <table>
   <tr>
