improve legend and icon rendering, replace some icons

--- a/combogen/templates/legend.html
+++ b/combogen/templates/legend.html
@@ -1,5 +1,6 @@
 {% macro fa_label(interaction) %}
-  <i class="fa {{ cfg.interaction_icon(interaction) }}"></i><br>{{ cfg.translate_interaction(lang, interaction) }}
+  <div class="legend-icon"><i class="fa {{ cfg.interaction_icon(interaction) }}"></i></div>
+  <div class="legend-content">{{ cfg.translate_interaction(lang, interaction) }}</div>
 {% endmacro %}
 <table>
   <tr>
