--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -32,10 +32,10 @@
 }
 
 .safe {
-  background-color: #31b149;
+  background-color: #35afff;
 }
 .synergy {
-  background-color: #1d6a2b;
+  background-color: #0a89dd;
 }
 .decrease {
   background-color: #006cb3;
